Fix Nearest Neighbour filter of the perspective transform mode

Perspective transform mode should use nearest neighbour when user
requests it.

BUG:420811